--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.8",
+    "@apollo/client": "^3.13.7",
     "@formspree/react": "^2.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "graphql": "^16.5.0",
-    "html-react-parser": "^3.0.4",
-    "next": "13.2.4",
+    "html-react-parser": "^5.2.3",
+    "next": "15.3.0",
     "numeral": "^2.0.6",
     "query-string": "^7.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-icons": "^4.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/react": "19.1.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^15.3.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
